[gd_scene load_steps=72 format=3 uid="uid://bueh3to31tma7"]

[ext_resource type="Script" path="res://scripts/enemies/enemy_zombie/enemy_big_zombie.gd" id="1_e1btv"]
[ext_resource type="PackedScene" uid="uid://cyv57gynwtrmu" path="res://components/hurtbox_component.tscn" id="2_tblxe"]
[ext_resource type="PackedScene" uid="uid://bnhgqxmsn3vu1" path="res://components/health_component.tscn" id="4_7chkb"]
[ext_resource type="Texture2D" uid="uid://cduo5m6k4p2ln" path="res://sprites/enemies/zombie.png" id="5_1454g"]
[ext_resource type="Shader" path="res://shaders/solid_color.gdshader" id="5_dw70b"]
[ext_resource type="Script" path="res://components/MeleeAttackComponent.gd" id="6_ld6kk"]
[ext_resource type="Script" path="res://scripts/enemies/enemy_zombie/zombie_state_machine.gd" id="7_1p2vg"]
[ext_resource type="Script" path="res://scripts/enemies/enemy_zombie/zombie_state_idle.gd" id="8_ro1g6"]
[ext_resource type="Script" path="res://scripts/enemies/enemy_zombie/zombie_state_moving.gd" id="9_qact4"]
[ext_resource type="Script" path="res://scripts/enemies/enemy_zombie/zombie_state_boarding.gd" id="10_q1yio"]
[ext_resource type="Script" path="res://scripts/enemies/enemy_zombie/zombie_state_finish_boarding.gd" id="11_r25hv"]
[ext_resource type="Script" path="res://scripts/enemies/enemy_zombie/zombie_state_attacking.gd" id="12_qh6v1"]
[ext_resource type="Script" path="res://scripts/enemies/enemy_zombie/zombie_state_dead.gd" id="13_0wnty"]
[ext_resource type="PackedScene" uid="uid://fhwaeth7nhpr" path="res://components/status_effect_component.tscn" id="15_6xt5u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hj0ig"]
radius = 8.55862

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4v00t"]
size = Vector2(46, 58)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1tdci"]
radius = 27.5
height = 55.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ieprm"]
shader = ExtResource("5_dw70b")
shader_parameter/color_override = Color(0.647059, 0, 0, 1)
shader_parameter/blend_delta = 1.0

[sub_resource type="AtlasTexture" id="AtlasTexture_yf78m"]
atlas = ExtResource("5_1454g")
region = Rect2(1792, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hr4rp"]
atlas = ExtResource("5_1454g")
region = Rect2(1920, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2ail"]
atlas = ExtResource("5_1454g")
region = Rect2(2048, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xyv7"]
atlas = ExtResource("5_1454g")
region = Rect2(2176, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_y646c"]
atlas = ExtResource("5_1454g")
region = Rect2(2304, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jfkq"]
atlas = ExtResource("5_1454g")
region = Rect2(128, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2dus"]
atlas = ExtResource("5_1454g")
region = Rect2(256, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bc7c"]
atlas = ExtResource("5_1454g")
region = Rect2(384, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_426q2"]
atlas = ExtResource("5_1454g")
region = Rect2(1920, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_huhxq"]
atlas = ExtResource("5_1454g")
region = Rect2(2048, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kln13"]
atlas = ExtResource("5_1454g")
region = Rect2(2176, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tfsr"]
atlas = ExtResource("5_1454g")
region = Rect2(2304, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w34e0"]
atlas = ExtResource("5_1454g")
region = Rect2(2432, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5kwug"]
atlas = ExtResource("5_1454g")
region = Rect2(2688, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fq56g"]
atlas = ExtResource("5_1454g")
region = Rect2(2816, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc7h6"]
atlas = ExtResource("5_1454g")
region = Rect2(2944, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi6pd"]
atlas = ExtResource("5_1454g")
region = Rect2(3072, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcl37"]
atlas = ExtResource("5_1454g")
region = Rect2(3200, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcjn6"]
atlas = ExtResource("5_1454g")
region = Rect2(4096, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw7x0"]
atlas = ExtResource("5_1454g")
region = Rect2(4224, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwjic"]
atlas = ExtResource("5_1454g")
region = Rect2(4352, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5bqt2"]
atlas = ExtResource("5_1454g")
region = Rect2(4480, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8wmi"]
atlas = ExtResource("5_1454g")
region = Rect2(2816, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5yco"]
atlas = ExtResource("5_1454g")
region = Rect2(2944, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbr55"]
atlas = ExtResource("5_1454g")
region = Rect2(3072, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v1io"]
atlas = ExtResource("5_1454g")
region = Rect2(384, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wtb3"]
atlas = ExtResource("5_1454g")
region = Rect2(0, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bu4y"]
atlas = ExtResource("5_1454g")
region = Rect2(128, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wppdn"]
atlas = ExtResource("5_1454g")
region = Rect2(256, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5pfx"]
atlas = ExtResource("5_1454g")
region = Rect2(0, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci8ff"]
atlas = ExtResource("5_1454g")
region = Rect2(128, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ueced"]
atlas = ExtResource("5_1454g")
region = Rect2(256, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv2ug"]
atlas = ExtResource("5_1454g")
region = Rect2(384, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0web"]
atlas = ExtResource("5_1454g")
region = Rect2(512, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbw8h"]
atlas = ExtResource("5_1454g")
region = Rect2(640, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwpk6"]
atlas = ExtResource("5_1454g")
region = Rect2(768, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo7ly"]
atlas = ExtResource("5_1454g")
region = Rect2(896, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsg6v"]
atlas = ExtResource("5_1454g")
region = Rect2(1024, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cndy"]
atlas = ExtResource("5_1454g")
region = Rect2(1152, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v8pe"]
atlas = ExtResource("5_1454g")
region = Rect2(1280, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0cb4"]
atlas = ExtResource("5_1454g")
region = Rect2(1408, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aia8c"]
atlas = ExtResource("5_1454g")
region = Rect2(2304, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfyvf"]
atlas = ExtResource("5_1454g")
region = Rect2(2432, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iflae"]
atlas = ExtResource("5_1454g")
region = Rect2(2560, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqepe"]
atlas = ExtResource("5_1454g")
region = Rect2(2688, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y1xa"]
atlas = ExtResource("5_1454g")
region = Rect2(2304, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud7wd"]
atlas = ExtResource("5_1454g")
region = Rect2(2176, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0p8v"]
atlas = ExtResource("5_1454g")
region = Rect2(2048, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr7kn"]
atlas = ExtResource("5_1454g")
region = Rect2(1792, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tp6vp"]
atlas = ExtResource("5_1454g")
region = Rect2(1664, 640, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n45vv"]
atlas = ExtResource("5_1454g")
region = Rect2(1536, 640, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_8jdkj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf78m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hr4rp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xyv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y646c")
}],
"loop": false,
"name": &"attacking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jfkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2dus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bc7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_426q2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huhxq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kln13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tfsr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w34e0")
}],
"loop": false,
"name": &"boarding",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5kwug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fq56g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc7h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bi6pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcl37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcjn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw7x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwjic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5bqt2")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8wmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u5yco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbr55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v1io")
}],
"loop": false,
"name": &"finish_boarding",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wtb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bu4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wppdn")
}],
"loop": false,
"name": &"hit",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5pfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci8ff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ueced")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv2ug")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0web")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbw8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwpk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo7ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsg6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cndy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v8pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0cb4")
}],
"loop": true,
"name": &"moving",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aia8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfyvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iflae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqepe")
}],
"loop": false,
"name": &"recovery",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y1xa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud7wd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0p8v")
}],
"loop": false,
"name": &"strike",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr7kn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tp6vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n45vv")
}],
"loop": false,
"name": &"windup",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mv14h"]
size = Vector2(37, 54)

[node name="EnemyBigZombie" type="CharacterBody2D" node_paths=PackedStringArray("wall_detector", "hurtbox", "attack_component", "animations", "health_component", "attack_timer") groups=["enemy"]]
z_index = 1
position = Vector2(0, 6)
collision_layer = 8
collision_mask = 0
script = ExtResource("1_e1btv")
wall_detector = NodePath("WallDetector")
hurtbox = NodePath("HurtboxComponent/Hurtbox")
attack_component = NodePath("MeleeAttackComponent")
state = "moving"
animations = NodePath("ZombieSpriteSheet")
health_component = NodePath("HealthComponent")
attack_timer = NodePath("AttackTimer")
enemy_reference = "big_zombie"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 9)
shape = SubResource("CircleShape2D_hj0ig")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_tblxe")]
collision_layer = 8
collision_mask = 4
health_component = NodePath("../HealthComponent")

[node name="Hurtbox" type="CollisionShape2D" parent="HurtboxComponent"]
visible = false
position = Vector2(-1, 7)
shape = SubResource("RectangleShape2D_4v00t")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("ANIMATION", "status_effect_component") instance=ExtResource("4_7chkb")]
MAX_HEALTH = 10.0
ANIMATION = NodePath("../ZombieSpriteSheet")
status_effect_component = NodePath("../StatusEffectComponent")

[node name="WallDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallDetector"]
position = Vector2(2.5, 9)
shape = SubResource("CapsuleShape2D_1tdci")

[node name="ZombieSpriteSheet" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_ieprm")
position = Vector2(2, 8)
scale = Vector2(1, 1.115)
sprite_frames = SubResource("SpriteFrames_8jdkj")
animation = &"recovery"
frame = 3
frame_progress = 1.0

[node name="MeleeAttackComponent" type="Area2D" parent="." node_paths=PackedStringArray("ATTACK_TIMER", "TARGET_AREA", "ANIMATIONS")]
collision_layer = 0
collision_mask = 0
script = ExtResource("6_ld6kk")
TARGET_TYPES = {
"car": false,
"character": true,
"enemy": false,
"player": true,
"terrain": false
}
ATTACK_TIMER = NodePath("../AttackTimer")
TARGET_AREA = NodePath("TargetArea")
ANIMATIONS = NodePath("../ZombieSpriteSheet")

[node name="TargetArea" type="CollisionShape2D" parent="MeleeAttackComponent"]
position = Vector2(24.5, 5)
shape = SubResource("RectangleShape2D_mv14h")

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource("7_1p2vg")

[node name="idle" type="Node2D" parent="StateMachine"]
process_mode = 4
script = ExtResource("8_ro1g6")

[node name="moving" type="Node2D" parent="StateMachine"]
process_mode = 4
script = ExtResource("9_qact4")

[node name="boarding" type="Node2D" parent="StateMachine"]
process_mode = 4
script = ExtResource("10_q1yio")

[node name="finish_boarding" type="Node2D" parent="StateMachine"]
process_mode = 4
script = ExtResource("11_r25hv")

[node name="attacking" type="Node2D" parent="StateMachine"]
process_mode = 4
script = ExtResource("12_qh6v1")

[node name="dead" type="Node2D" parent="StateMachine"]
process_mode = 4
script = ExtResource("13_0wnty")

[node name="StatusEffectComponent" parent="." instance=ExtResource("15_6xt5u")]

[connection signal="animation_finished" from="ZombieSpriteSheet" to="StateMachine/boarding" method="animation_finished"]
[connection signal="animation_finished" from="ZombieSpriteSheet" to="StateMachine/finish_boarding" method="animation_finished"]
[connection signal="animation_finished" from="ZombieSpriteSheet" to="StateMachine/attacking" method="animation_finished"]
[connection signal="animation_finished" from="ZombieSpriteSheet" to="StateMachine/dead" method="animation_finished"]
